# embedded-device-interface

./: .gitignore  CMakeLists.txt  README.md
client_python/: README.md  pyproject.toml
client_python/src/device_api/: __init__.py  device_interface.py  models.py
client_python/test/: test_get_set.py  test_loopback.py  test_main.py  test_rgb.py
proto/: build.py  interface.proto  nanopb.proto
server_c/: device_api.c  device_api.h  handlers.c  handlers.h
server_c/handlers/: get_request copy.c  get_request.c  set_request.c
