[tool.poetry]
name = "device-api"
version = "0.1.0"
description = ""
authors = ["Floris Vernieuwe <floris@vernieuwe.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
eros = {path = "D:/Projects/raydrive/t0/t0-python-client/eros", develop = true}
nanopb = "^0.4.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
