[tool.poetry]
name = "device-api"
version = "0.1.0"
description = ""
authors = ["Floris Vernieuwe <floris@vernieuwe.eu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nanopb = "^0.4.9.1"
eros = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
